working with astro db

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.10",
-    "firebase": "^11.6.1",
-    "firebase-admin": "^13.3.0"
+    "@astrojs/db": "^0.14.13",
+    "astro": "^5.7.10"
   }
 }
